--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,6 +7,16 @@
     android:background="@color/backgroundColor">
 
     <!-- View Title -->
+
+    <ImageView
+        android:id="@+id/profileTitleBgImg"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/profileTitleTxt"
         android:layout_width="0dp"
@@ -30,11 +40,10 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/profileConstraintHeader"
         android:layout_width="wrap_content"
-        android:layout_height="160dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="180dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileTitleTxt">
+        app:layout_constraintTop_toBottomOf="@+id/profileTitleBgImg">
 
 
         <!-- BACKGROUND PROFILE PIC -->
@@ -42,7 +51,7 @@
         <ImageView
             android:id="@+id/profileHeaderBackgroundImg"
             android:layout_width="415dp"
-            android:layout_height="160dp"
+            android:layout_height="0dp"
             android:contentDescription="@string/profileHeaderBackground"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -50,36 +59,24 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
-
-        <!-- BLUE BACKGROUND LAYER -->
-
-        <ImageView
-            android:id="@+id/profileHeaderTransparencyImg"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:contentDescription="@string/profileHeaderTransparency"
-            app:layout_constraintBottom_toBottomOf="@+id/profileHeaderBackgroundImg"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@color/colorAccentTransparency" />
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/profile_header_background" />
 
         <!-- PROFILE PIC -->
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/profilePhotoImg"
-            android:layout_width="130dp"
-            android:layout_height="160dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
             android:contentDescription="@string/profileHeaderPicture"
             android:elevation="4dp"
             android:src="@drawable/default_picture"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/profileHeaderBackgroundImg" />
 
         <!-- PROFILE NAME -->
 
@@ -87,8 +84,10 @@
             android:id="@+id/profileNameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
             android:contentDescription="@string/profileHeaderNameTxt"
             android:fontFamily="sans-serif-light"
             android:shadowColor="#2d2d2d"
@@ -97,51 +96,19 @@
             android:shadowRadius="5"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
-            android:textSize="34sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="matheus" />
-
-        <!-- BUTTONS -->
-
-        <Button
-            android:id="@+id/profileDeleteBtn"
-            android:layout_width="114dp"
-            android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="14dp"
-            android:background="@drawable/btn_ripple_delete"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="14sp"
-            android:textStyle="bold"
+            android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="@+id/profileHeaderBackgroundImg"
-            app:layout_constraintEnd_toEndOf="@+id/profileHeaderTransparencyImg" />
-
-        <Button
-            android:id="@+id/profileLogoutBtn"
-            android:layout_width="114dp"
-            android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="4dp"
-            android:background="@drawable/btn_ripple_logout"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/profileDeleteBtn"
-            app:layout_constraintEnd_toEndOf="@+id/profileHeaderTransparencyImg" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profilePhotoImg"
+            tools:text="matheus" />
 
     </android.support.constraint.ConstraintLayout>
 
     <!-- HABILITIES -->
 
     <TextView
-        android:id="@+id/profileHabilitiesTxt"
+        android:id="@+id/musicianAbilitiesLblTxt"
         android:layout_width="wrap_content"
         android:layout_height="22dp"
         android:layout_marginStart="16dp"
@@ -165,7 +132,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileHabilitiesTxt">
+        app:layout_constraintTop_toBottomOf="@+id/musicianAbilitiesLblTxt">
 
         <!-- Microphone Checkbox -->
         <CheckBox
