--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -269,7 +269,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/preferencesAgeLblTxt"
-        app:rsb_max="60"
+        app:rsb_max="80"
         app:rsb_maxThumbDrawable="@drawable/thumb_circle"
         app:rsb_minRange="1"
         app:rsb_minThumbDrawable="@drawable/thumb_circle"
@@ -314,7 +314,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:fontFamily="sans-serif-light"
-        android:text="@string/profileNewMessagesTxt"
+        android:text="@string/preferencesNewMessagesTxt"
         android:textColor="@color/textColor"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -332,20 +332,60 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/lbl_new_messages" />
 
-    <Button
-        android:id="@+id/preferencesBtnLogout"
+    <!-- Fourth Divider -->
+    <ImageView
+        android:id="@+id/preferencesFourthDivider"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="2dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@android:color/background_light"
-        android:drawableLeft="@drawable/ic_logout"
-        android:paddingLeft="140dp"
-        android:paddingRight="120dp"
-        android:text="@string/profileLogoutBtnTxt"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/divider"
+        android:contentDescription="@string/profileDivider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lbl_new_messages" />
+
+    <!-- Account Options -->
+
+    <!-- Label -->
+    <TextView
+        android:id="@+id/preferencesAccountLblTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/preferencesAccountOptions"
+        android:textColor="@color/textColor"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/preferencesFourthDivider" />
+
+    <TextView
+        android:id="@+id/preferencesLogoutTxt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:fontFamily="sans-serif-light"
+        android:text="@string/preferencesLogoutBtnTxt"
+        android:textColor="@color/textColor"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/preferencesAccountLblTxt" />
+
+    <!-- Others Checkbox -->
+    <CheckBox
+        android:id="@+id/preferencesBtnLogout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:button="@drawable/power_icon"
+        android:checked="true"
+        app:layout_constraintBottom_toBottomOf="@+id/preferencesLogoutTxt"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/preferencesLogoutTxt" />
 
 </android.support.constraint.ConstraintLayout>
